add_executable(day01a day01a.cpp)

set_target_properties(day01a
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day01b day01b.cpp)

set_target_properties(day01b
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day02a day02a.cpp)

set_target_properties(day02a
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day02b day02b.cpp)

set_target_properties(day02b
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day03 day03.cpp)

set_target_properties(day03
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day04 day04.cpp)

set_target_properties(day04
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
# clang-tidy is producing false-positives for this one
#    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day05 day05.cpp)

set_target_properties(day05
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day06 day06.cpp)

set_target_properties(day06
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day07 day07.cpp)

set_target_properties(day07
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day08 day08.cpp)

set_target_properties(day08
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day09 day09.cpp)

set_target_properties(day09
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
# clang-tidy is producing false-positives for this one
#    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day10 day10.cpp)

set_target_properties(day10
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day11 day11.cpp)

set_target_properties(day11
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
# clang-tidy is producing false-positives for this one
#    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day12 day12.cpp)

set_target_properties(day12
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day13 day13.cpp)

set_target_properties(day13
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
# clang-tidy is producing false-positives for this one
#    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day14 day14.cpp)

set_target_properties(day14
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )

add_executable(day15 day15.cpp)

set_target_properties(day15
  PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
    CXX_STANARD_REQUIRED ON
    CXX_CLANG_TIDY "clang-tidy;-warnings-as-errors=*"
  )
